agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/Closed_Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>Closed_Lost_Reason__c</fullName>
    <description>Salesrep can choose multiple options related to the closed lost opportunity.</description>
    <label>Closed Lost Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Analytics/features</fullName>
            </value>
            <value>
                <fullName>Audience</fullName>
            </value>
            <value>
                <fullName>Bad debtor</fullName>
            </value>
            <value>
                <fullName>Budget</fullName>
            </value>
            <value>
                <fullName>Budget cut</fullName>
            </value>
            <value>
                <fullName>Change in audience targeting</fullName>
            </value>
            <value>
                <fullName>Change of content strategy</fullName>
            </value>
            <value>
                <fullName>Competitor - JD Supra</fullName>
            </value>
            <value>
                <fullName>Competitor - Mondaq</fullName>
            </value>
            <value>
                <fullName>Competitor - Other</fullName>
            </value>
            <value>
                <fullName>Consolidating Lexology products</fullName>
            </value>
            <value>
                <fullName>Data not detailed enough</fullName>
            </value>
            <value>
                <fullName>Dissolved/Merged</fullName>
            </value>
            <value>
                <fullName>Don&apos;t know what to do with data</fullName>
            </value>
            <value>
                <fullName>Issues with LBR service</fullName>
            </value>
            <value>
                <fullName>No response/no reason given</fullName>
            </value>
            <value>
                <fullName>No ROI/not worth cost</fullName>
            </value>
            <value>
                <fullName>Not enough content</fullName>
            </value>
            <value>
                <fullName>No time to make use of data/tools</fullName>
            </value>
            <value>
                <fullName>Not Paid</fullName>
            </value>
            <value>
                <fullName>Not producing content/didn&apos;t write</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Persistent product issues</fullName>
            </value>
            <value>
                <fullName>Primary contact/purchaser left/not in budget</fullName>
            </value>
            <value>
                <fullName>Switching to competitor</fullName>
            </value>
            <value>
                <fullName>Timing</fullName>
            </value>
            <value>
                <fullName>Uncontactable</fullName>
            </value>
            <value>
                <fullName>Wrong audience reading</fullName>
            </value>
            <value>
                <fullName>No longer ranked</fullName>
            </value>
            <value>
                <fullName>Now covered by licence</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>