agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/Closed_Lost_reason_detailed__c.field-meta.xml
<CustomField>
    <fullName>Closed_Lost_reason_detailed__c</fullName>
    <description>Field Dependent on &quot;Closed Lost Reasons&quot; for CS team</description>
    <label>Closed Lost reason detailed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Miss - sold</fullName>
            </value>
            <value>
                <fullName>Not enough content to warrant investment.</fullName>
            </value>
            <value>
                <fullName>Free Lexology newsfeed was enough.</fullName>
            </value>
            <value>
                <fullName>Lack of relevant jurisdictional coverage.</fullName>
            </value>
            <value>
                <fullName>Platform too hard to navigate.</fullName>
            </value>
            <value>
                <fullName>Not enough content on clients</fullName>
            </value>
            <value>
                <fullName>Wrong persona / reader type</fullName>
            </value>
            <value>
                <fullName>Change of internal strategy</fullName>
            </value>
            <value>
                <fullName>Practitioners moved elsewhere/ Loss Change in staff and/</fullName>
            </value>
            <value>
                <fullName>Personal not firm expense</fullName>
            </value>
            <value>
                <fullName>Firm  dissolved</fullName>
            </value>
            <value>
                <fullName>New  Primary Contact</fullName>
            </value>
            <value>
                <fullName>Unable to demonstrate/deliver value</fullName>
            </value>
            <value>
                <fullName>Purchased for a specific project for 1 year.</fullName>
            </value>
            <value>
                <fullName>Not enough BD work – purchased as a tool for BD, opportunities didn’t materialise.</fullName>
            </value>
            <value>
                <fullName>Switch to competitor</fullName>
            </value>
            <value>
                <fullName>Conditional -  if so, who?</fullName>
            </value>
            <value>
                <fullName>Conditional -  if so, who? When is the expiry of the contract happening?</fullName>
            </value>
            <value>
                <fullName>No reason given / stopped replying</fullName>
            </value>
            <value>
                <fullName>Touch points unsuccessful</fullName>
            </value>
            <value>
                <fullName>CEP incomplete</fullName>
            </value>
            <value>
                <fullName>Subscription Administration error</fullName>
            </value>
            <value>
                <fullName>Bad debtor</fullName>
            </value>
            <value>
                <fullName>Sanction client</fullName>
            </value>
            <value>
                <fullName>Breach of contract</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Contract consolidation</fullName>
            </value>
            <value>
                <fullName>Firm Merged</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>