agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/Closed_Lost_reason_Free_Text__c.field-meta.xml
<CustomField>
    <fullName>Closed_Lost_reason_Free_Text__c</fullName>
    <label>Closed Lost reason (Free Text)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>