agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/Closed_Lost_Reasons_PI__c.field-meta.xml
<CustomField>
    <fullName>Closed_Lost_Reasons_PI__c</fullName>
    <description>Primary Closed lost reason</description>
    <label>Closed Lost Reasons Practice Intelligenc</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Audience</fullName>
            </value>
            <value>
                <fullName>Competitor</fullName>
            </value>
            <value>
                <fullName>Engagement</fullName>
            </value>
            <value>
                <fullName>Lack of Budget/Cost Prohibitive</fullName>
            </value>
            <value>
                <fullName>LBR internal cancellations</fullName>
            </value>
            <value>
                <fullName>No fault cancelations</fullName>
            </value>
            <value>
                <fullName>Product/ Content</fullName>
            </value>
            <value>
                <fullName>ROI: can be fit into other areas</fullName>
            </value>
            <value>
                <fullName>T&amp;Cs - Non-Agreement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>