agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/Closed_Lost_sub_reason__c.field-meta.xml
<CustomField>
    <fullName>Closed_Lost_sub_reason__c</fullName>
    <description>Please select the secondary reason to close lost this opportunity</description>
    <inlineHelpText>Indicates the secondary reason to close lost an opportunity.</inlineHelpText>
    <label>Closed Lost sub reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Closed_Lost_primary_reason__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account not set up correctly</fullName>
            </value>
            <value>
                <fullName>Bad debtor</fullName>
            </value>
            <value>
                <fullName>Breach of contract</fullName>
            </value>
            <value>
                <fullName>Budget cut</fullName>
            </value>
            <value>
                <fullName>Change of content strategy</fullName>
            </value>
            <value>
                <fullName>Change of internal strategy</fullName>
            </value>
            <value>
                <fullName>Client does not value product</fullName>
            </value>
            <value>
                <fullName>Client is wrong persona</fullName>
            </value>
            <value>
                <fullName>Client stopped replying</fullName>
            </value>
            <value>
                <fullName>Contract consolidation/covered by licence agreement</fullName>
            </value>
            <value>
                <fullName>Data not detailed enough</fullName>
            </value>
            <value>
                <fullName>Didn&apos;t submit agreed content</fullName>
            </value>
            <value>
                <fullName>Didn&apos;t use tools/didn&apos;t know how to use data</fullName>
            </value>
            <value>
                <fullName>Dissolved</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Lack of jurisdictional coverage</fullName>
            </value>
            <value>
                <fullName>Lack of sector coverage</fullName>
            </value>
            <value>
                <fullName>LBR not responsive enough</fullName>
            </value>
            <value>
                <fullName>Merger</fullName>
            </value>
            <value>
                <fullName>Mis-sold</fullName>
            </value>
            <value>
                <fullName>No reason given</fullName>
            </value>
            <value>
                <fullName>Not a budget priority</fullName>
            </value>
            <value>
                <fullName>Not eligible for renewal</fullName>
            </value>
            <value>
                <fullName>Not enough content/free newsfeed was enough</fullName>
            </value>
            <value>
                <fullName>No time to use data/tools/content</fullName>
            </value>
            <value>
                <fullName>Not impressed with results</fullName>
            </value>
            <value>
                <fullName>Not producing content</fullName>
            </value>
            <value>
                <fullName>Persistent product issues</fullName>
            </value>
            <value>
                <fullName>Personal expense</fullName>
            </value>
            <value>
                <fullName>Platform too hard to navigate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>