agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/Closed_Lost_Volume__c.field-meta.xml
<CustomField>
    <fullName>Closed_Lost_Volume__c</fullName>
    <description>Volume of Closed Lost opportunities, used for reporting.</description>
    <formula>IF( TEXT(StageName) = &apos;Closed Lost&apos;, 1, 0)</formula>
    <inlineHelpText>Volume of Closed Lost opportunities, used for reporting.</inlineHelpText>
    <label>Closed Lost (Volume)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>