agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/Closed_Won_Volume__c.field-meta.xml
<CustomField>
    <fullName>Closed_Won_Volume__c</fullName>
    <formula>IF( TEXT(StageName) = &apos;Closed Won&apos;, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closed Won Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>