agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/Cold__c.field-meta.xml
<CustomField>
    <fullName>Cold__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to flag cold target opportunities being worked by Key Account Managers</description>
    <inlineHelpText>Field to flag cold target opportunities being worked by Key Account Managers</inlineHelpText>
    <label>Cold</label>
    <type>Checkbox</type>
</CustomField>