agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/Cold_Identify_10__c.field-meta.xml
<CustomField>
    <fullName>Cold_Identify_10__c</fullName>
    <description>Volume of Opportunities at the Identify stage, used for reporting.</description>
    <formula>IF( TEXT(StageName) = &apos;Identify&apos;, 1, 0)</formula>
    <inlineHelpText>Volume of Opportunities at the Identify stage, used for reporting.</inlineHelpText>
    <label>Identify (Volume)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>