agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/Competitor_name__c.field-meta.xml
<CustomField>
    <fullName>Competitor_name__c</fullName>
    <description>Please enter the name of the competitor</description>
    <inlineHelpText>Name of the competitor. Used for closed lost reasons.</inlineHelpText>
    <label>Competitor name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>