agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/Contact_Role_Check_Has_Error__c.field-meta.xml
<CustomField>
    <fullName>Contact_Role_Check_Has_Error__c</fullName>
    <defaultValue>false</defaultValue>
    <description>System flag. Set TRUE by the &quot;Check Completeness of Contact Roles&quot; before-save flow when a lookup faults; drives the after-save fault logger. Cleared on the next clean save. Not for manual edit; keep off page layouts.</description>
    <label>Contact Role Check Has Error</label>
    <type>Checkbox</type>
</CustomField>