agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/Contact_Role_Check_Last_Error__c.field-meta.xml
<CustomField>
    <fullName>Contact_Role_Check_Last_Error__c</fullName>
    <description>System field. Set by the &quot;Check Completeness of Contact Roles&quot; before-save flow when a lookup faults (fail-open). The after-save companion flow logs it to Flow_Log__c, and it is cleared on the next clean save. Not for manual edit; keep off page layouts.</description>
    <label>Contact Role Check Last Error</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>