agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/Content_Sub_Present__c.field-meta.xml
<CustomField>
    <fullName>Content_Sub_Present__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Content Sub Present?</label>
    <type>Checkbox</type>
</CustomField>