agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/Content_Sub_Total_Sale_Value__c.field-meta.xml
<CustomField>
    <fullName>Content_Sub_Total_Sale_Value__c</fullName>
    <description>This field captures the total opportunity line item value for Content Subs.</description>
    <inlineHelpText>This field captures the total opportunity line item value for Content Subs.</inlineHelpText>
    <label>Content Sub Total Sale Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>