agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/Contract_Attached__c.field-meta.xml
<CustomField>
    <fullName>Contract_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The checkbox is populated through a flow, where it is flagged as true if the document or Adobe sign document is available. This flag is then used in a validation process.</description>
    <label>Contract Attached</label>
    <type>Checkbox</type>
</CustomField>