agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/Contract_Out_Amount__c.field-meta.xml
<CustomField>
    <fullName>Contract_Out_Amount__c</fullName>
    <description>Total value of Opportunities at Contract Out stage.</description>
    <formula>IF( TEXT(StageName) = &quot;Contract Out&quot;, Amount , 0
)</formula>
    <inlineHelpText>Total value of Opportunities at Contract Out stage.</inlineHelpText>
    <label>Contract Out Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>