agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/Created_Date_Month__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_Month__c</fullName>
    <formula>TEXT(YEAR(Created_Date__c)) &amp; &quot;-&quot; &amp;
CASE(TEXT(MONTH(Created_Date__c)),
&quot;1&quot;, &quot;01&quot;,
&quot;2&quot;, &quot;02&quot;,
&quot;3&quot;, &quot;03&quot;,
&quot;4&quot;, &quot;04&quot;,
&quot;5&quot;, &quot;05&quot;,
&quot;6&quot;, &quot;06&quot;,
&quot;7&quot;, &quot;07&quot;,
&quot;8&quot;, &quot;08&quot;,
&quot;9&quot;, &quot;09&quot;,
&quot;10&quot;, &quot;10&quot;,
&quot;11&quot;, &quot;11&quot;,
&quot;12&quot;, &quot;12&quot;,
NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Date Month</label>
    <type>Text</type>
</CustomField>