agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/Created_Renewal_From_Automation__c.field-meta.xml
<CustomField>
    <fullName>Created_Renewal_From_Automation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ALM Created Renewal From Automation</label>
    <type>Checkbox</type>
</CustomField>