agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/Credit_Card_Type__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_Type__c</fullName>
    <label>ALM Credit Card Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>VISA</fullName>
            </value>
            <value>
                <fullName>Mastercard</fullName>
            </value>
            <value>
                <fullName>American Express</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>