agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/Cross_Division_Referrer_Business_Group__c.field-meta.xml
<CustomField>
    <fullName>Cross_Division_Referrer_Business_Group__c</fullName>
    <formula>Cross_divisional_Referrer__r.Business_Group__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cross Division Referrer Business Group</label>
    <type>Text</type>
</CustomField>