agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/Cross_divisional_Referrer__c.field-meta.xml
<CustomField>
    <fullName>Cross_divisional_Referrer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to allocate referrals across divisions. Editable with permission set: Cross divisional Referrer</description>
    <label>Cross divisional Referrer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>