agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/Cross_divisional_Referrer_Active__c.field-meta.xml
<CustomField>
    <fullName>Cross_divisional_Referrer_Active__c</fullName>
    <formula>Cross_divisional_Referrer__r.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cross divisional Referrer :Active</label>
    <type>Checkbox</type>
</CustomField>