agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/Cross_Sell_Amount__c.field-meta.xml
<CustomField>
    <fullName>Cross_Sell_Amount__c</fullName>
    <label>Cross Sell Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>