agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/CS_Contact__c.field-meta.xml
<CustomField>
    <fullName>CS_Contact__c</fullName>
    <description>CS Contacts from Opportunity Team Member object</description>
    <inlineHelpText>CS Contacts from Opportunity Team Member</inlineHelpText>
    <label>CS Contact</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Alexander Mounayer-Rigby</fullName>
            </value>
            <value>
                <fullName>Alexandra Papadopoulos</fullName>
            </value>
            <value>
                <fullName>Alice Dearman</fullName>
            </value>
            <value>
                <fullName>Amy Elderfield</fullName>
            </value>
            <value>
                <fullName>Ankit Chauhan</fullName>
            </value>
            <value>
                <fullName>Beatrice Redgrave-Scott</fullName>
            </value>
            <value>
                <fullName>Chris Riley</fullName>
            </value>
            <value>
                <fullName>Cristina Costa</fullName>
            </value>
            <value>
                <fullName>Francesca Clixby</fullName>
            </value>
            <value>
                <fullName>Hashim Ali</fullName>
            </value>
            <value>
                <fullName>HJ Sirott</fullName>
            </value>
            <value>
                <fullName>Isobel Eastwood</fullName>
            </value>
            <value>
                <fullName>Jermaine Elu</fullName>
            </value>
            <value>
                <fullName>Joe Turner</fullName>
            </value>
            <value>
                <fullName>Kathy Tse</fullName>
            </value>
            <value>
                <fullName>Katrina Pimentel</fullName>
            </value>
            <value>
                <fullName>Laura McCallum</fullName>
            </value>
            <value>
                <fullName>Maya Engledow</fullName>
            </value>
            <value>
                <fullName>Oliver Spurr</fullName>
            </value>
            <value>
                <fullName>Omkar Bayannavar</fullName>
            </value>
            <value>
                <fullName>Reyhan Alhas</fullName>
            </value>
            <value>
                <fullName>Shazia Ishaq</fullName>
            </value>
            <value>
                <fullName>Shubhankar Bhardi</fullName>
            </value>
            <value>
                <fullName>Theo Billing</fullName>
            </value>
            <value>
                <fullName>Theodore Hutton</fullName>
            </value>
            <value>
                <fullName>Tom Blower</fullName>
            </value>
            <value>
                <fullName>Victor Babatunde</fullName>
            </value>
            <value>
                <fullName>Vishnu Kumar</fullName>
            </value>
            <value>
                <fullName>Yee Tang</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>