agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/CS_Contact_Added__c.field-meta.xml
<CustomField>
    <fullName>CS_Contact_Added__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CS Contact Add Task</label>
    <type>Checkbox</type>
</CustomField>