agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/CS_Contact_team_member__c.field-meta.xml
<CustomField>
    <fullName>CS_Contact_team_member__c</fullName>
    <description>Rolls up the number of team members CS Conbtact</description>
    <inlineHelpText>Rolls up the number of team members CS Conbtact</inlineHelpText>
    <label>CS Contact team member</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>