agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/CS_Health_Number__c.field-meta.xml
<CustomField>
    <fullName>CS_Health_Number__c</fullName>
    <description>This field is used to manually populate platform id by CS Team</description>
    <label>CS Health Number DO not use</label>
    <length>10</length>
    <type>Text</type>
</CustomField>