agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/Currency_Symbol__c.field-meta.xml
<CustomField>
    <fullName>Currency_Symbol__c</fullName>
    <formula>CASE(
    TEXT(CurrencyIsoCode),
    &quot;EUR&quot;, &quot;€&quot;,
    &quot;GBP&quot;, &quot;£&quot;,
    &quot;USD&quot;, &quot;$&quot;,
    TEXT(CurrencyIsoCode)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Currency Symbol</label>
    <type>Text</type>
</CustomField>