agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/Current_Deal_Length__c.field-meta.xml
<CustomField>
    <fullName>Current_Deal_Length__c</fullName>
    <description>Combines two datasets to get the current deal length.</description>
    <formula>IF(
AND(ISBLANK(
IF(
ISBLANK(SBQQ__PrimaryQuote__r.SBQQ__SubscriptionTerm__c),  Deal_Length__c, SBQQ__PrimaryQuote__r.SBQQ__SubscriptionTerm__c
)
),  
OR(TEXT(StageName) = &quot;Identify&quot;, TEXT(StageName) = &quot;Qualify&quot;, TEXT(StageName) = &quot;Evaluate&quot;, TEXT(StageName) = &quot;Contract Out&quot;, TEXT(StageName) = &quot;Closed Lost&quot;)
),
 Previous_Deal_Length__c,
IF(
ISBLANK(SBQQ__PrimaryQuote__r.SBQQ__SubscriptionTerm__c),  Deal_Length__c, SBQQ__PrimaryQuote__r.SBQQ__SubscriptionTerm__c
))</formula>
    <inlineHelpText>Combines two datasets to get the current deal length.</inlineHelpText>
    <label>Current Deal Length</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>