agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/Current_User_s_Team__c.field-meta.xml
<CustomField>
    <fullName>Current_User_s_Team__c</fullName>
    <formula>TEXT($User.Team__c) =  TEXT(Owner.Team__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current User&apos;s Team</label>
    <type>Checkbox</type>
</CustomField>