agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/Customer_Journey__c.field-meta.xml
<CustomField>
    <fullName>Customer_Journey__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Journey</label>
    <referenceTo>Customer_Journey__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>