agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/Customer_Journey_run__c.field-meta.xml
<CustomField>
    <fullName>Customer_Journey_run__c</fullName>
    <defaultValue>false</defaultValue>
    <description>It indicates if the Customer Journey Task flow has been fired</description>
    <label>Customer Journey run</label>
    <type>Checkbox</type>
</CustomField>