agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/Customer_Success_Plans_Completed__c.field-meta.xml
<CustomField>
    <fullName>Customer_Success_Plans_Completed__c</fullName>
    <description>Customer Success Plans Completed</description>
    <inlineHelpText>Customer Success Plans Completed</inlineHelpText>
    <label>Customer Success Plans Completed</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>