agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/CventEvents__Attendee__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__Attendee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Attendee</label>
    <referenceTo>CventEvents__Attendee__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>