agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/CventEvents__Event__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cvent Event Number</label>
    <referenceTo>CventEvents__Event__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>