agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/CventEvents__EventTitle__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__EventTitle__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; CventEvents__Event__r.CventEvents__pkg_Title__c, &quot;&quot;) &amp; HYPERLINK(&quot;/&quot; &amp; CventEvents__Event__c, CventEvents__Event__r.CventEvents__pkg_Title__c)</formula>
    <label>Cvent Event</label>
    <type>Text</type>
</CustomField>