agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/CZ_Closed_Won_c__c.field-meta.xml
<CustomField>
    <fullName>CZ_Closed_Won_c__c</fullName>
    <formula>ISPICKVAL(StageName, &quot;Closed Won&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CZ_Closed_Won__c</label>
    <type>Checkbox</type>
</CustomField>